Changelog for JVCL 3.0
======================
2004-11-28:
- JvFooter now uses JvImgBtn instead of JvBitBtn (JvBitBtn renders disabled hi-color glyphs badly) // peter3
- JvMouseGesture changed to comply with JVCL coding rules. A JVCL Converter file has been added to the /converter folder to simplify updating old projects to use the new types and names. Event handlers still needs to be updated manually. // peter3
2004-11-25:
- The package generator has been updated to allow for GUID values (D2005 requirement) // obones
- JVCL Installer and build.exe have been updated to allow Delphi 2005 installation/compilation // ahuser
- bpg2mak.exe is compatible with Delphi 2005 .bdsgroup file format // ahuser
2004-11-22:
- TJvBalloonHint:
  * Allow user to set hint font and color by assigning from Screen.HintFont and Application.HintColor when appropriate.
  * Expand tab (#9) characters
  * Try to avoid placing the window outside the screen bounds and if it does happen, make sure it is the bottom part of the window that isn't visible // peter3
- TJvListView: 
  * Several bugs with the load and save methods fixed
  * Reimplemented some save/load methods using stringlists // peter3
- TJvZoom:
  * Added ZoomPercentage - opposite of ZoomLevel
  * Added CrosshairPicture. Use instead of CrossHairColor/CrossHairSize. Still need to set CrossHair to true to use.
  * Added ZoomInAt method: use with Enabled set to false to manually control the zoom area, use with Enabled set to true to move the cursor to the specified location
  * published several missing propeties (Anchors, Align, Constraints, Enabled, Visible) // peter3
2004-11-18:
- JvRas32: A new RasAvailable property has been added and it no longer raises an exception when RAS is not available // peter3
2004-11-17:
- Changed JclZlibMultiple.pas to use the new JclCompression.pas // (rom)
2004-11-07:
- Added the Config Manager API conversion and updated the Setup API conversion.